* Wed Feb 28 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
- Some template and concat changes to make debugging the module easier
  - Add headers to more easily diagnose where to stick params
  - Order the concat sections
- Add some missing params from sssd::provider::ad
  - default_shell
  - dyndns_update
  - fallback_homedir
  - krb5_realm
  - krb5_store_password_if_offline
  - ldap_schema

* Fri Jan 19 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- Added sssd class option to automatically configure SSSD for an IPA
  domain, when the host is joined to an IPA domain.

* Fri Dec 15 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- Leveraged PR from Mark Fitch to add ima provider configuration

* Wed Dec 13 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.0-0
- Enforce limits set in /etc/login.defs for uid_min and uid_max by default and
  fall back to something sensible for SSSD

* Mon Sep 18 2017 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 6.0.4-0
- Set minimum length on sssd::domains

* Mon Sep 11 2017 Judy Johnson <judy.johnson@onyxpoint.com> - 6.0.3-0
- Only enable 'try_inotify' if explicitly set

* Wed Aug 30 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.3-0
- Sssd::DebugLevel now handles all variants specfied in sssd.conf man page
- All instances of debug_level are now typed as Sssd::DebugLevel

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Confine puppet version in metadata.json

* Fri Apr 07 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.1-0
- Worked around a bug in EL6 where the ldap client library incorrectly handles
  128 bit ciphers in the cipher list

* Fri Mar 17 2017 Clayton Mentzer, Liz Nemsick 6.0.0-1
- Updated README
- Update puppet version in .travis.yaml

* Thu Feb 09 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.0-0
- Changed type of debug level to be consistent for all modules.

* Mon Jan 23 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0