@@ -1,3 +1,6 @@
+* Wed Mar 14 2018 Philippe Muller <philippe.muller@gmail.com> - 6.1.0-0
+- Allow passing ldap_tls_cacert to sssd::provider::ldap
+
 * Wed Feb 28 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
 - Some template and concat changes to make debugging the module easier
   - Add headers to more easily diagnose where to stick params
